# glimmer

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  build.py  build_dependencies.sh  glimmer.h
GlimmerTest/: GlimmerTest.sln  GlimmerTest.vcxproj  GlimmerTest.vcxproj.filters  test.cpp
GlimmerTest/GlimmerTestGLFW/: GlimmerGLFWTest.vcxproj  GlimmerGLFWTest.vcxproj.filters  platform.cpp
GlimmerTest/GlimmerTestSDL3/: GlimmerTest.vcxproj  GlimmerTest.vcxproj.filters  platform.cpp
GlimmerTest/GlimmerTestSDLSoftware/: GlimmerSDLSoftwareTest.vcxproj  GlimmerSDLSoftwareTest.vcxproj.filters  platform.cpp
GlimmerTest/x64/Release/: GlimmerSDL3GPUTest.exp  GlimmerSDL3GPUTest.lib  GlimmerSDL3SoftwareTest.exp  GlimmerSDL3SoftwareTest.lib  GlimmerSDL3Test.exp  GlimmerSDL3Test.lib
imgui_cmake/: CMakeLists.txt
src/: config.h  context.cpp  context.h  draw.cpp  draw.h  glimmer.cpp  glimmer.h  im_font_manager.cpp  im_font_manager.h  layout.cpp  layout.h  platform.cpp  platform.h  renderer.cpp  renderer.h  style.cpp  style.h  testing.cpp  testing.h  types.h  utils.h  widgets.cpp  widgets.h
src/custom/: PathInput.cpp  PathInput.h
src/imrichtext/: imrichtext.cpp  imrichtextimpl.cpp  imrichtextutils.h
src/libs/inc/: DEPENDENCY_VERSIONS.txt
src/libs/inc/imgui/: imconfig.h
src/libs/inc/imguisdl3/: imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h
src/libs/inc/imrichtext/: LICENSE  imrichtext.h  imrichtextimpl.h  imrichtextutils.h
src/libs/lib/: lunasvg.lib  plutosvg.lib  plutovg.lib
src/libs/lib/win32/debug/: plutovg.lib
src/libs/lib/win32/release/: lunasvg.lib  plutovg.lib
src/libs/src/: imgui_impl_glfw.cpp  imrichtext.cpp  imrichtextimpl.cpp  imrichtextutils.cpp
staticlib/Release/: glimmer_sdl3.lib
staticlib/glimmer/: glimmer.vcxproj  glimmer.vcxproj.filters
test/: test.cpp  test.slnx  test.vcxproj
